package com.hcf.head.first.design.pattern.chapter01.fly;

public interface FlyBehavior {
    void fly();
}
