package com.hcf.head.first.design.pattern.chapter01.quack;

public interface QuackBehavior {
    void quack();
}
